added week 5 and rest